--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,12 @@
 @import './css/style.css';
 
 #app {
-  max-width: 1280px;
+  width: min(calc(100% - 24px), 1000px);
   margin: 0 auto;
-  padding: 2rem;
 
   font-weight: normal;
+}
+
+footer {
+  margin-top: auto;
 }
