--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -49,7 +49,10 @@ body {
   font-family: "Red Hat Text", sans-serif;
   display: flex;
   flex-direction: column;
-  background-color: #333;
+  background-color: var(--clr-neutral-black);
+  background-image: url("../images/bg-stars.svg"), url("../images/pattern-hills.svg");
+  background-repeat: no-repeat;
+  background-position: center, bottom;
 }
 
 /* Inherit fonts for inputs and buttons */
