--- a/src/assets/scss/base/_boilerplate.scss
+++ b/src/assets/scss/base/_boilerplate.scss
@@ -43,10 +43,16 @@ body {
     padding: 0;
     font-family: 'Red Hat Text', sans-serif;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
 
-    // temp background-color
-    background-color: #333;
+    background-color: var(--clr-neutral-black);
+    background: {
+        image: url('../images/bg-stars.svg'), url('../images/pattern-hills.svg');
+        repeat: no-repeat;
+        position: center, bottom;
+    };
 }
 
 /* Inherit fonts for inputs and buttons */
