--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -48,11 +48,14 @@ body {
   padding: 0;
   font-family: "Red Hat Text", sans-serif;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
   background-color: var(--clr-neutral-black);
   background-image: url("../images/bg-stars.svg"), url("../images/pattern-hills.svg");
   background-repeat: no-repeat;
   background-position: center, bottom;
+  background-size: contain;
 }
 
 /* Inherit fonts for inputs and buttons */
